<resources>
    <string name="app_name">Camera2 Video Image</string>
    <string name="Video_Button">Video Button</string>
    <string name="Camera_Button">Camera Button</string>
    <string name="txtCredits">www.google.com</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <array name="resolutions_array">hello

    </array>
    <string-array name="antibanding_modes">
        <item>Off</item>
        <item>50Hz</item>
        <item>60Hz</item>
        <item>Auto</item>
    </string-array>
    <string-array name="antibanding_modes_values">
    <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>

    <string-array name="pref_Pipeline_Options">
        <item>NONE</item>
        <item>SENSOR_COLOR_TRASNFORM</item>
        <item>FORWARD_MATRIX</item>
        <item>CALIBRATION_TRANSFORM</item>
    </string-array>
    <string-array name="pref_Pipeline_Values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
<string-array name="tonemap_mode_options">
    <item>Contrast_Curve</item>
    <item>Fast</item>
    <item>High Quality</item>
    <item>Gamma Value</item>
    <item>Preset Curve</item>
</string-array>
    <string-array name="tonemap_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="listviewentries">
        <item>Tutorial</item>
        <item>Email</item>
        <item>View Images</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="sensor_reference_entries">
        <item>SENSOR_REFERENCE_ILLUMINANT1_D50</item>
        <item>SENSOR_REFERENCE_ILLUMINANT1_D55</item>
        <item>SENSOR_REFERENCE_ILLUMINANT1_D65</item>
        <item>SENSOR_REFERENCE_ILLUMINANT1_D70</item>
    </string-array>
    <string-array name="sensor_reference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_pages">Pages</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Sections: %1$d</string>
    <string name="title_activity_tabed_menu">TabedMenuActivity</string>
    <string name="wikilink">https://docs.google.com/document/d/1ry0PapwrdjWBNmrmT83O05COyDPzGQ0oozbmWkNVnvQ/edit?usp=sharing</string>
    <string name="mobileapplicationlink">https://www.youtube.com/channel/UC4jh7YBBb0UnPIef2NOSJhQ</string>
    <string name="mikeemail">camera2api@gmail.com</string>
    <string name="meettheresearcherslink">http://www.lassondeundergraduateresearch.com/2017-summer-research#/meet-the-researchers/</string>

</resources>
