<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b44770">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@mipmap/thanku2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/textView5"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Special Thanks To"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="163dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:gravity="center"
        android:text="Mobile Application Tutorials:"
        android:textColor="@android:color/white"
        android:layout_marginTop="43dp"
        android:textAlignment="center"

        android:layout_alignTop="@+id/textView5"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@string/mobileapplicationlink"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Additional Information:"
        android:textColor="@android:color/white"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="bold"


        android:id="@+id/textView7"
        android:layout_above="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="Camera2 Wiki Report:"
        android:id="@+id/textView8"
        android:layout_above="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:text="Inquires:"
        android:id="@+id/textView10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/mikeemail"
        android:id="@+id/textView11"
        android:layout_above="@+id/textView12"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Check us out on the Lassonde Undergraduate Page:"
        android:textColor="@android:color/white"
        android:gravity="center"

        android:id="@+id/textView12"
        android:layout_above="@+id/textView13"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meettheresearcherslink"
        android:linksClickable="true"
        android:autoLink="web"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView13" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:linksClickable="true"
        android:autoLink="web"
        android:textColor="@android:color/white"
        android:text="@string/wikilink"
        android:id="@+id/textView9"
        android:layout_above="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>